<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTwo"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/emptyResultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:text="@string/ResultActivity_empty_result"
            android:textColor="@color/steel"
            android:textSize="17sp" />

        <Button
            android:id="@+id/takeTestButton"
            style="@style/SolidButton"
            android:layout_margin="20sp"
            android:text="@string/ResultActivity_take_the_test" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingTop="30sp"
                android:text="@string/Result_real_life_score"
                android:textColor="@color/darkGreyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/realScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textColor="@color/darkGreyBlue"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30sp"
                android:text="@string/ResultActivity_correct_without_repetition"
                android:textColor="@color/steel"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:text="@string/ResultActivity_your_stats"
                android:textColor="@color/darkGreyBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:text="@string/ResultActivity_correct_answers"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/correctAnswer"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:textColor="@color/darkGreyBlue"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:text="@string/ResultActivity_replays"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/replyCountTextView"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:textColor="@color/darkGreyBlue"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/buyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="30sp"
                    android:background="@color/veryLightPink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30sp"
                    android:layout_marginEnd="30sp"
                    android:gravity="center"
                    android:text="@string/ResultActivity_buy_now"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/buyTestButton"
                    style="@style/SolidButton"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    android:text="@string/buy_now" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="30sp"
                    android:background="@color/veryLightPink" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>