<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/top_shadow_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/repeatButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="visible">

            <Button
                android:id="@+id/repeatButton"
                style="@style/StokeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:text="@string/TestActivity_repeat" />

            <Button
                android:id="@+id/answerButton"
                style="@style/SolidButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:text="@string/TestActivity_answer" />
        </LinearLayout>

        <Button
            android:id="@+id/readyButton"
            style="@style/SolidButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:text="@string/TestActivity_i_m_ready"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>