<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTwo"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/takeTestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Ranking_take_full_test"
            android:textColor="@color/steel"
            android:textSize="17sp" />

        <Button
            android:id="@+id/takeTestButton"
            style="@style/SolidButton"
            android:layout_margin="20sp"
            android:text="@string/Test_Activity_take_test" />
    </LinearLayout>

    <TextView
        android:id="@+id/demoTestText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mustard"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingBottom="5dp"
        android:text="@string/Ranking_last_test_demo"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rankingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-5dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <include layout="@layout/content_result_ranking_registrate" />
    </RelativeLayout>
</LinearLayout>